--- a/recipes/cri cri.html
+++ b/recipes/cri cri.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <a>Il Cri-cri è un tipico cioccolatino pralinato piemontese, prodotto in particolare in alcune confetterie torinesi. </a>
-    <img src="recipes/Images/cricri.JPG" alt="Cri Cri" width="50" height="50" style="float: ;right">
+    <img src="recipes/Images/cricri.JPG" alt="Cri Cri" width="50" height="50" style="float: right">
   </body>
 </html>
