--- a/recipes/krumiri.html
+++ b/recipes/krumiri.html
@@ -9,7 +9,7 @@
 <body>
     <a>I krumiri o crumiri sono i biscotti tipici di Casale Monferrato, nati nel 1878. È probabilmente in ricordo di
         Vittorio Emanuele II, morto quell'anno, che i krumiri presero la tipica forma rassomigliante ai suoi baffi.</a>
-    <img src="recipes/Images/krumiri.jpg" alt="Krumiri" width="50" height="50" style="float: ;right">
+    <img src="recipes/Images/krumiri.jpg" alt="Krumiri" width="50" height="50" style="float: right">
 </body>
 
 </html>
