--- a/recipes/paste di meliga.html
+++ b/recipes/paste di meliga.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <a>Le paste di meliga (in piemontese paste 'd melia) sono un biscotto frollino tipico del Piemonte, in particolare delle Valli di Lanzo, del cuneese, del biellese e bassa Val di Susa.</a>
-    <img src="recipes/Images/paste di meliga.jpg" alt="Paste di meliga" width="50" height="50" style="float: ;right">
+    <img src="recipes/Images/paste di meliga.jpg" alt="Paste di meliga" width="50" height="50" style="float: right">
   </body>
 </html>
