--- a/recipes/pesche ripiene.html
+++ b/recipes/pesche ripiene.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <a>Le pesche ripiene vennero elaborate dalla cucina borghese di fine Ottocento, e sono oggi considerate un classico gastronomico estivo.</a>
-    <img src="recipes/Images/pesche ripiene.jpg" alt="Pesche ripiene" width="50" height="50" style="float: ;right">
+    <img src="recipes/Images/pesche ripiene.jpg" alt="Pesche ripiene" width="50" height="50" style="float: right">
   </body>
 </html>
