--- a/recipes/bonet.html
+++ b/recipes/bonet.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <a>Il bonèt è un dolce tradizionale tipico del Piemonte, a base di uova, zucchero, latte, cacao, amaretti secchi e liquore (solitamente rum). Nasce agli inizi dell'Ottocento dalla specifica rielaborazione e dall'evoluzione locale di preparazioni preesistenti e diffuse nelle cucine borghesi e nobili italiane ed europee. </a>
-    <img src="recipes/Images/bonet.jpg" alt="Bonet" width="50" height="50" style="float: ;right">
+    <img src="recipes/Images/bonet.jpg" alt="Bonet" width="50" height="50" style="float: right">
   </body>
 </html>
