--- a/recipes/canestrelli.html
+++ b/recipes/canestrelli.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <a>I canestrelli sono biscotti tipici di numerose zone dell'Italia, ma sono particolarmente diffusi in Piemonte</a>
-    <img src="recipes/Images/canestrelli.jpg" alt="Canestrelli" width="50" height="50" style="float: ;right">
+    <img src="recipes/Images/canestrelli.jpg" alt="Canestrelli" width="50" height="50" style="float: right">
   </body>
 </html>
