--- a/recipes/panna cotta.html
+++ b/recipes/panna cotta.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <a>La panna cotta è un tipo di budino italiano, ottenuto unendo panna e zucchero, insaporendoli con i semi di una bacca di vaniglia e aggiungendo della colla di pesce per far rassodare il tutto una volta posto in frigorifero.</a>
-    <img src="recipes/Images/panna cotta.jpg" alt="Panna Cotta" width="50" height="50" style="float: ;right">
+    <img src="recipes/Images/panna cotta.jpg" alt="Panna Cotta" width="50" height="50" style="float: right">
   </body>
 </html>
