--- a/recipes/torrone.html
+++ b/recipes/torrone.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <a>Il torrone è un dolce tipico italiano principalmente natalizio; il suo nome deriva dal verbo latino torrēre che significa abbrustolire con riferimento alla tostatura della frutta secca che lo compone.</a>
-    <img src="recipes/Images/torrone.jpg" alt="Torrone" width="50" height="50" style="float: ;right">
+    <img src="recipes/Images/torrone.jpg" alt="Torrone" width="50" height="50" style="float: right">
   </body>
 </html>
