--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <header>
     <meta charset="UTF-8">
-    <h1>Odin Recipes</h1>
-  </head>
+    <div>
+      <h1>Odin Recipes</h1>
+    </div>
+    <hr>
+  </header>
   <body>
-    <h2>Lista dei principali dolci Piemontesi:</h2>
-    <ul>
-        <li><a href="recipes/baci di dama.html">Baci di Dama</a>.</ol>
-        <li><a href="recipes/bonet.html">Bonet</a>.</li>
-        <li><a href="recipes/cri cri.html">Cri Cri(caramella)</a>.</li>
-        <li><a href="recipes/canestrelli.html">Canestrelli</a>.</li>
-        <li><a href="recipes/krumiri.html">Krumiri</a>.</li>
-        <li><a href="recipes/panna cotta.html">Panna Cotta</a>.</li>
-        <li><a href="recipes/paste di meliga.html">Paste di Meliga</a>.</li>
-        <li><a href="recipes/pesche ripiene.html">Pesche ripiene</a>.</li>
-        <li><a href="recipes/torrone.html">Torrone</a>.</li>
-    </ul>
+    <nav>
+      <div id="titolo">
+        <h2>Lista dei principali dolci Piemontesi:</h2>
+        <hr>
+      </div>
+      <div id="lista">
+        <ul>
+          <li><a href="recipes/baci di dama.html">Baci di Dama</a>.</li>
+          <li><a href="recipes/bonet.html">Bonet</a>.</li>
+          <li><a href="recipes/cri cri.html">Cri Cri(caramella)</a>.</li>
+          <li><a href="recipes/canestrelli.html">Canestrelli</a>.</li>
+          <li><a href="recipes/krumiri.html">Krumiri</a>.</li>
+          <li><a href="recipes/panna cotta.html">Panna Cotta</a>.</li>
+          <li><a href="recipes/paste di meliga.html">Paste di Meliga</a>.</li>
+          <li><a href="recipes/pesche ripiene.html">Pesche ripiene</a>.</li>
+          <li><a href="recipes/torrone.html">Torrone</a>.</li>
+        </ul>
+      </div>
+    </nav>
+    <div id="salsa">
+      <section>
+        <a href="https://www.wikipedia.com"> Page made thanks to Wikipedia</a>
+      </section>
+      <section>
+        <a href="https://www.theodinproject.com/about">
+          <img src="Images/theOdinProject.png" alt="theOdinProject">
+        </a>
+      </section>
+    </div>
   </body>
 </html>
