--- a/recipes/baci di dama.html
+++ b/recipes/baci di dama.html
@@ -5,7 +5,8 @@
     <h1>Baci di dama</h1>
   </head>
   <body>
+    <img src="Baci di dama.jpg" alt="Baci di Dama" style="border-image-width: 30px; width: 350px; height: 350px">
     <a>I baci di dama sono dei biscotti originari del Piemonte della città di Tortona dove nacquero un secolo fa, chiamati così perché composti da due calotte di pasta unite dal cioccolato che richiamano due labbra intente a baciare</a>
-    <img src="recipes/Images/Baci di dama.jpg" alt="Baci di Dama" width="50" height="50" style="float: right">
+    <a href="baci di dama.html/#header">Ritorna sopra</a>
   </body>
 </html>
