--- a/recipes/baci di dama.html
+++ b/recipes/baci di dama.html
@@ -3,10 +3,33 @@
   <head>
     <meta charset="UTF-8">
     <h1>Baci di dama</h1>
+    <hr>
   </head>
   <body>
-    <img src="Baci di dama.jpg" alt="Baci di Dama" style="border-image-width: 30px; width: 350px; height: 350px">
+    <div>
+      <img src="Baci di dama.jpg" alt="Baci di Dama" border-image-width="30px" width="350px" height="250px" style="position: relative; align-items: center;">
     <a>I baci di dama sono dei biscotti originari del Piemonte della città di Tortona dove nacquero un secolo fa, chiamati così perché composti da due calotte di pasta unite dal cioccolato che richiamano due labbra intente a baciare</a>
-    <a href="baci di dama.html/#header">Ritorna sopra</a>
+    </div>
+    <div>
+      <ol>
+        <li>Lorem ipsum</li>
+        <li>Lorem ipsum</li>
+        <li>Lorem ipsum</li>
+        <li>Lorem ipsum</li>
+      </ol>
+    </div>
+    <div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore necessitatibus quaerat repudiandae at? Ut nihil illum, consequuntur obcaecati consectetur earum odit esse. Perferendis ullam ducimus aspernatur labore, saepe sapiente totam?</p>
+    </div>
   </body>
+  <hr>
+  <footer>
+    <div>
+      <a href="baci di dama.html/#header">Ritorna sopra</a>
+    </div>
+    <div>
+      <a href="../index.html">Ritorna alla pagina principale</a>
+    <hr>
+    </div>
+  </footer>
 </html>
