--- a/recipes/bonet.html
+++ b/recipes/bonet.html
@@ -3,9 +3,32 @@
   <head>
     <meta charset="UTF-8">
     <h1>Bonet</h1>
+    <hr>
   </head>
   <body>
-    <a>Il bonèt è un dolce tradizionale tipico del Piemonte, a base di uova, zucchero, latte, cacao, amaretti secchi e liquore (solitamente rum). Nasce agli inizi dell'Ottocento dalla specifica rielaborazione e dall'evoluzione locale di preparazioni preesistenti e diffuse nelle cucine borghesi e nobili italiane ed europee. </a>
-    <img src="recipes/Images/bonet.jpg" alt="Bonet" width="50" height="50" style="float: right">
+    <div>
+      <img src="Images/bonet.jpg" alt="Bonet" border-image-width="30px" width="350px" height="250px" style="position: relative; align-items: center;">
+      <a>Il bonèt è un dolce tradizionale tipico del Piemonte, a base di uova, zucchero, latte, cacao, amaretti secchi e liquore (solitamente rum). Nasce agli inizi dell'Ottocento dalla specifica rielaborazione e dall'evoluzione locale di preparazioni preesistenti e diffuse nelle cucine borghesi e nobili italiane ed europee. </a>
+    </div>
+    <div>
+      <ol>
+        <li>Lorem ipsum</li>
+        <li>Lorem ipsum</li>
+        <li>Lorem ipsum</li>
+        <li>Lorem ipsum</li>
+      </ol>
+    </div>
+    <div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore necessitatibus quaerat repudiandae at? Ut nihil illum, consequuntur obcaecati consectetur earum odit esse. Perferendis ullam ducimus aspernatur labore, saepe sapiente totam?</p>
+    </div>
   </body>
+  <hr>
+  <footer>
+    <div>
+      <a href="bonet.html/#header">Ritorna sopra</a>
+    </div>
+    <div>
+      <a href="../index.html">Ritorna alla pagina principale</a>
+    </div>
+  </footer>
 </html>
