--- a/recipes/canestrelli.html
+++ b/recipes/canestrelli.html
@@ -3,9 +3,32 @@
   <head>
     <meta charset="UTF-8">
     <h1>Canestrelli</h1>
+    <hr>
   </head>
   <body>
-    <a>I canestrelli sono biscotti tipici di numerose zone dell'Italia, ma sono particolarmente diffusi in Piemonte</a>
-    <img src="recipes/Images/canestrelli.jpg" alt="Canestrelli" width="50" height="50" style="float: right">
+    <div>
+      <img src="Images/canestrelli.jpg" alt="Canestrelli" border-image-width="30px" width="350px" height="250px" style="position: relative; align-items: center;">
+      <a>I canestrelli sono biscotti tipici di numerose zone dell'Italia, ma sono particolarmente diffusi in Piemonte</a>
+    </div>
+    <div>
+      <ol>
+        <li>Lorem ipsum</li>
+        <li>Lorem ipsum</li>
+        <li>Lorem ipsum</li>
+        <li>Lorem ipsum</li>
+      </ol>
+    </div>
+    <div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore necessitatibus quaerat repudiandae at? Ut nihil illum, consequuntur obcaecati consectetur earum odit esse. Perferendis ullam ducimus aspernatur labore, saepe sapiente totam?</p>
+    </div>
   </body>
+  <hr>
+  <footer>
+    <div>
+      <a href="canestrelli.html/#head">Ritorna sopra</a>
+    </div>
+    <div>
+      <a href="../index.html">Ritorna alla pagina principale</a>
+    </div>
+  </footer>
 </html>
