--- a/recipes/cri cri.html
+++ b/recipes/cri cri.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <h1>Cri Cri</h1>
+    <hr>
   </head>
   <body>
-    <a>Il Cri-cri è un tipico cioccolatino pralinato piemontese, prodotto in particolare in alcune confetterie torinesi. </a>
-    <img src="recipes/Images/cricri.JPG" alt="Cri Cri" width="50" height="50" style="float: right">
+    <div>
+      <img src="Images/cricri.JPG" alt="Cri Cri" border-image-width="30px" width="350px" height="250px" style="position: relative; align-items: center;">
+      <a>Il Cri-cri è un tipico cioccolatino pralinato piemontese, prodotto in particolare in alcune confetterie torinesi. </a>
+    </div>
+    <hr>
+    <div>
+      <a href="cricri.html/#head">Ritorna sopra</a>
+    </div>
+    <div>
+      <a href="../index.html">Ritorna alla pagina principale</a>
+    </div>
   </body>
 </html>
