--- a/recipes/krumiri.html
+++ b/recipes/krumiri.html
@@ -4,12 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <h1>Krumiri</h1>
+    <hr>
 </head>
-
 <body>
-    <a>I krumiri o crumiri sono i biscotti tipici di Casale Monferrato, nati nel 1878. È probabilmente in ricordo di
-        Vittorio Emanuele II, morto quell'anno, che i krumiri presero la tipica forma rassomigliante ai suoi baffi.</a>
-    <img src="recipes/Images/krumiri.jpg" alt="Krumiri" width="50" height="50" style="float: right">
-</body>
-
-</html>
+    <div>
+        <img src="Images/krumiri.jpg" alt="Krumiri" border-image-width="30px" width="350px" height="250px" style="position: relative; align-items: center;">
+        <a>I krumiri o crumiri sono i biscotti tipici di Casale Monferrato, nati nel 1878. È probabilmente in ricordo di
+            Vittorio Emanuele II, morto quell'anno, che i krumiri presero la tipica forma rassomigliante ai suoi baffi.</a>
+        </div>
+      <hr>
+      <div>
+        <a href="krumiri.html/#head">Ritorna sopra</a>
+      </div>
+      <div>
+        <a href="../index.html">Ritorna alla pagina principale</a>
+      </div>
+    </body>
+  </html>
