--- a/recipes/panna cotta.html
+++ b/recipes/panna cotta.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <h1>Panna Cotta</h1>
+    <hr>
   </head>
   <body>
-    <a>La panna cotta è un tipo di budino italiano, ottenuto unendo panna e zucchero, insaporendoli con i semi di una bacca di vaniglia e aggiungendo della colla di pesce per far rassodare il tutto una volta posto in frigorifero.</a>
-    <img src="recipes/Images/panna cotta.jpg" alt="Panna Cotta" width="50" height="50" style="float: right">
+    <div>
+      <img src="Images/panna cotta.jpg" alt="Panna Cotta" border-image-width="30px" width="350px" height="250px" style="position: relative; align-items: center;">
+      <a>La panna cotta è un tipo di budino italiano, ottenuto unendo panna e zucchero, insaporendoli con i semi di una bacca di vaniglia e aggiungendo della colla di pesce per far rassodare il tutto una volta posto in frigorifero.</a>
+    </div>
+    <hr>
+    <div>
+      <a href="krumiri.html/#head">Ritorna sopra</a>
+    </div>
+    <div>
+      <a href="../index.html">Ritorna alla pagina principale</a>
+    </div>
   </body>
 </html>
