--- a/recipes/paste di meliga.html
+++ b/recipes/paste di meliga.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <h1>Paste di Meliga</h1>
+    <hr>
   </head>
   <body>
-    <a>Le paste di meliga (in piemontese paste 'd melia) sono un biscotto frollino tipico del Piemonte, in particolare delle Valli di Lanzo, del cuneese, del biellese e bassa Val di Susa.</a>
-    <img src="recipes/Images/paste di meliga.jpg" alt="Paste di meliga" width="50" height="50" style="float: right">
+    <div>
+      <img src="Images/paste di meliga.jpg" alt="Paste di meliga" border-image-width="30px" width="350px" height="250px" style="position: relative; align-items: center;">
+      <a>Le paste di meliga (in piemontese paste 'd melia) sono un biscotto frollino tipico del Piemonte, in particolare delle Valli di Lanzo, del cuneese, del biellese e bassa Val di Susa.</a>
+    </div>
+    <hr>
+    <div>
+      <a href="paste di meliga.html/#head">Ritorna sopra</a>
+    </div>
+    <div>
+      <a href="../index.html">Ritorna alla pagina principale</a>
+    </div>
   </body>
 </html>
