--- a/recipes/pesche ripiene.html
+++ b/recipes/pesche ripiene.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <h1>Pesche ripiene</h1>
+    <hr>
   </head>
   <body>
-    <a>Le pesche ripiene vennero elaborate dalla cucina borghese di fine Ottocento, e sono oggi considerate un classico gastronomico estivo.</a>
-    <img src="recipes/Images/pesche ripiene.jpg" alt="Pesche ripiene" width="50" height="50" style="float: right">
+    <div>
+      <img src="Images/pesche ripiene.jpg" alt="Pesche ripiene" border-image-width="30px" width="350px" height="250px" style="position: relative; align-items: center;">
+      <a>Le pesche ripiene vennero elaborate dalla cucina borghese di fine Ottocento, e sono oggi considerate un classico gastronomico estivo.</a>
+    </div>
+    <hr>
+    <div>
+      <a href="pesche ripiene.html/#head">Ritorna sopra</a>
+    </div>
+    <div>
+      <a href="../index.html">Ritorna alla pagina principale</a>
+    </div>
   </body>
 </html>
