--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
       <div id="titolo">
         <h2>Lista dei principali dolci Piemontesi:</h2>
+        <img src="recipes/Images/carrello dolci.jpg" alt="carrello dei dolci" height="250" width="300" style="position: centered;">
         <hr>
       </div>
       <div id="lista">
