--- a/recipes/torrone.html
+++ b/recipes/torrone.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <h1>Torrone</h1>
+    <hr>
   </head>
   <body>
-    <a>Il torrone è un dolce tipico italiano principalmente natalizio; il suo nome deriva dal verbo latino torrēre che significa abbrustolire con riferimento alla tostatura della frutta secca che lo compone.</a>
-    <img src="recipes/Images/torrone.jpg" alt="Torrone" width="50" height="50" style="float: right">
+    <div>
+      <img src="Images/torrone.jpg" alt="Torrone" border-image-width="30px" width="350px" height="250px" style="position: relative; align-items: center;">
+      <a>Il torrone è un dolce tipico italiano principalmente natalizio; il suo nome deriva dal verbo latino torrēre che significa abbrustolire con riferimento alla tostatura della frutta secca che lo compone.</a>
+    </div>
+    <hr>
+    <div>
+      <a href="torrone.html/#head">Ritorna sopra</a>
+    </div>
+    <div>
+      <a href="../index.html">Ritorna alla pagina principale</a>
+    </div>
   </body>
 </html>
